# honeygui-template-EBadge

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  HML-Spec.md  README.md  SConscript  easy_demo.code-workspace  project.json
assets/: conversion.json
config/: 8773e.json
src/: easy_demoEntry.c
src/callbacks/: bt_callbacks.c  bt_callbacks.h  easy_demoMain_callbacks.c  easy_demoMain_callbacks.h  menu_callbacks.c  menu_callbacks.h  share_callbacks.c  share_callbacks.h
src/ui/: CMakeLists.txt  bt_ui.c  bt_ui.h  easy_demoMain_ui.c  easy_demoMain_ui.h  menu_ui.c  menu_ui.h  share_ui.c  share_ui.h
src/user/: bt_user.c  bt_user.h  easy_demoMain_user.c  easy_demoMain_user.h  gsensor_reader.c  menu_user.c  menu_user.h  share_user.c  share_user.h  spatial_wallpaper.c
ui/: bt.hml  easy_demoMain.hml  menu.hml  share.hml
